--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,8 @@
 {
 	"manifest_version": 3,
-	"name": "ChromeTS LaunchPad",
+	"name": "WB-Video-Feedback-Downloader",
 	"version": "1.0.0",
-	"description": "A Chrome Extension boilerplate with TypeScript",
+	"description": "Demo of WB video feedbacks downloader",
 	"icons": {
 		"16": "icons/icon16.png",
 		"48": "icons/icon48.png",
@@ -13,13 +13,16 @@
 	},
 	"content_scripts": [
 		{
-			"matches": ["<all_urls>"],
+			"matches": ["https://www.wildberries.ru/catalog/*/feedbacks*"],
 			"js": ["content.js"]
 		}
 	],
 	"action": {
 		"default_popup": "popup.html"
 	},
-	"options_page": "options.html",
-	"permissions": ["storage"]
+	"permissions": ["storage", "webRequest"],
+	"host_permissions": [
+  	  "*://*.wildberries.ru/*",
+	  "*://*.wbbasket.ru/*"
+  ]
 }
